--- a/app/src/main/res/layout/fragment_choose_knit.xml
+++ b/app/src/main/res/layout/fragment_choose_knit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/table"
+    android:id="@+id/knitChooseTable"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,3 +14,22 @@
 
 
 </android.support.v7.widget.RecyclerView>
+    <!---
+    <LinearLayout
+        android:id="@+id/table"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose knit"
+            android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
+
+    -->
