Попытка запилить recyclerview

--- a/app/src/main/res/layout/fragment_choose_knit.xml
+++ b/app/src/main/res/layout/fragment_choose_knit.xml
@@ -1,35 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/knitChooseTable"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ChooseKnitFragment"
-    android:stretchColumns="*">
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-
-
-</android.support.v7.widget.RecyclerView>
-    <!---
-    <LinearLayout
-        android:id="@+id/table"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Choose knit"
-            android:layout_gravity="center_horizontal"/>
 
-    </LinearLayout>
 
-    -->
+</LinearLayout>
+
+
+
+
+
+    <!---
+
+
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/knitChooseTable"
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      tools:context=".ChooseKnitFragment"
+      android:stretchColumns="*">
+
+
+
+    </android.support.v7.widget.RecyclerView>
+
+      <LinearLayout
+          android:id="@+id/table"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          xmlns:app="http://schemas.android.com/apk/res-auto">
+
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Choose knit"
+              android:layout_gravity="center_horizontal"/>
+
+      </LinearLayout>
+
+      -->
